syntax = "proto3";

service ChatClientService {
    rpc RecvMsg (RecvMsgRequest) returns (RecvMsgReply);
}

message RecvMsgRequest {
    string msg = 1;
}
message RecvMsgReply {
    bool ok = 1;
}