syntax = "proto3";

service ChatServerService {
    rpc Register (ChatClientRegisterRequest) returns (ChatClientRegisterReply);
    rpc BcastMsg (BcastMsgRequest) returns (BcastMsgReply);
}
message ChatClientRegisterRequest {
    string nick = 1;
    string url = 2;
}
message ChatClientRegisterReply {
    repeated User users = 1;
}
message User {
    string nick = 1;
}

message BcastMsgRequest {
    string nick = 1;
    string msg = 2;
}
message BcastMsgReply {
    bool ok = 1;
}

